Fixed an error with delete
