# swagger-output.json
@@ -236,6 +236,29 @@
           }
         }
       }
+    },
+    "/messages/{id}": {
+      "delete": {
+        "description": "Delete one message",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
